fixed the spacing between the table and paragraphs

--- a/employersStyle.css
+++ b/employersStyle.css
@@ -52,7 +52,7 @@ hr {
 
 .table {
 
-	padding: 150px 100px 150px 100px;
+	padding: 50px 100px 50px 100px;
 }
 
 .table table{
